--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Title of the document</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>DANIEL BARAHONA</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
-The content of the document......
+    <h1>DANIEL BARAHONA</h1>
+    <p id="contact">Moralzarzal, Madrid 28411 | +34 644 31 73 66</p>
+    <p>danibtcontacto@gmail.com</p>
+    <a id="resume" href="./CV.pdf" target="_blank">Resume</a>
+    <a href=https://github.com/danibt656 target="_blank">GitHub Page</a>
 </body>
 
 </html> 
