--- a/index.html
+++ b/index.html
@@ -1,16 +1,45 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>DANIEL BARAHONA</title>
-    <link rel="stylesheet" href="./styles.css">
-</head>
+<html lang="en">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <title>Daniel Barahona</title>
+        <link rel="icon" href="./imgs/ico.png">
+        <meta name="description" content="Simple portfolio website">
+        <meta name="author" content="Daniel Barahona">
+        <a name="links">
+            <link rel="stylesheet" href="./styles.css">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/tonsky/FiraCode@4/distr/fira_code.css">
+        </a>
+    </head>
 
-<body>
-    <h1>DANIEL BARAHONA</h1>
-    <p id="contact">Moralzarzal, Madrid 28411 | +34 644 31 73 66</p>
-    <p>danibtcontacto@gmail.com</p>
-    <a id="resume" href="./CV.pdf" target="_blank">Resume</a>
-    <a href=https://github.com/danibt656 target="_blank">GitHub Page</a>
-</body>
-
-</html> 
+    <body>
+        <h1>
+            { daniel barahona; }
+        </h1>
+        <!-- Contact info: location & telephone number -->
+        <div id="codeblock">
+            <code>
+                <p class="contact">
+                    <i><a style="color:#48CAB1">function</a></i>
+                    <a style="color:#A074C4"> getContactInfo()</a> {
+                </p>
+                <pre class="contact">   <a style="color:#E24F68">const</a> email = <a style="color:orange">"danibtcontacto@gmail.com"</a>;</pre>
+                <pre class="contact">   <a style="color:#E24F68">const</a> tel_num = <a style="color:orange">"+34 644 31 73 66"</a>;</pre>
+                <p class="contact">}</p>
+            </code>
+        </div>
+        <!-- Links to GitHub and Resume-->
+        <div id="codeblock" style="padding-top:50px">
+            <code>
+                <p class="ext_links">
+                    <a style="color:#48CAB1">if</a>
+                    <a style="color:#A074C4">interestedInMe()</a> or <a style="color:#A074C4"> wannaCheckMyWork()</a> {
+                </p>
+                <pre class="ext_links">    goto <a style="color:#E24F68" href="./CV.pdf" target="_blank">MY_RESUME</a>;</pre>
+                <pre class="ext_links">    goto <a style="color:#E24F68" href=https://github.com/danibt656 target="_blank">MY_GITHUB</a>;</pre>
+                <p class="ext_links">}</p>
+            </code>
+        </div>
+    </body>
+</html>  
