added road :) Needs to be responsive

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </head>
 
     <body>
-        <h1>
-            { daniel barahona; }
+        <h1 class="dynamic_name">
+            <span>{ daniel barahona; }</span>
         </h1>
         <!-- Contact info: location & telephone number -->
         <div id="codeblock">
@@ -30,16 +30,19 @@
             </code>
         </div>
         <!-- Links to GitHub and Resume-->
-        <div id="codeblock" style="padding-top:50px">
+        <div id="codeblock">
             <code>
                 <p class="ext_links">
-                    <a style="color:#48CAB1">if</a>
+                    <a style="color:#48CAB1">if</a> 
                     <a style="color:#A074C4">interestedInMe()</a> or <a style="color:#A074C4"> wannaCheckMyWork()</a> {
                 </p>
                 <pre class="ext_links">    goto <a style="color:#E24F68" href="./CV.pdf" target="_blank">MY_RESUME</a>;</pre>
                 <pre class="ext_links">    goto <a style="color:#E24F68" href=https://github.com/danibt656 target="_blank">MY_GITHUB</a>;</pre>
                 <p class="ext_links">}</p>
             </code>
+        </div>
+        <div class="infinite">
+            <div class="shadow"></div>
         </div>
     </body>
 </html>  
