--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
     <body>
         <h1 class="dynamic_name">
-            <span>{ daniel barahona; }</span>
+            <span>{ <a style="color:#48CAB1">public</a> daniel_barahona; }</span>
         </h1>
         <!-- Contact info: location & telephone number -->
         <div id="codeblock">
             <code>
                 <p class="contact">
-                    <i><a style="color:#48CAB1">function</a></i>
-                    <a style="color:#A074C4"> getContactInfo()</a> {
+                    <a style="color:#48CAB1">function</a>
+                    <i style="color:#A074C4"> getContactInfo()</i> {
                 </p>
                 <pre class="contact">   <a style="color:#E24F68">const</a> email = <a style="color:orange">"danibtcontacto@gmail.com"</a>;</pre>
                 <pre class="contact">   <a style="color:#E24F68">const</a> tel_num = <a style="color:orange">"+34 644 31 73 66"</a>;</pre>
@@ -34,10 +34,11 @@
             <code>
                 <p class="ext_links">
                     <a style="color:#48CAB1">if</a> 
-                    <a style="color:#A074C4">interestedInMe()</a> or <a style="color:#A074C4"> wannaCheckMyWork()</a> {
+                    <i style="color:#A074C4">interestedInMe()</i> or <i style="color:#A074C4"> wannaCheckMyWork()</i> {
                 </p>
                 <pre class="ext_links">    goto <a style="color:#E24F68" href="./CV.pdf" target="_blank">MY_RESUME</a>;</pre>
                 <pre class="ext_links">    goto <a style="color:#E24F68" href=https://github.com/danibt656 target="_blank">MY_GITHUB</a>;</pre>
+                <pre class="ext_links">    goto <a style="color:#E24F68" href=https://www.linkedin.com/in/daniel-barahona-b889751aa/ target="_blank">MY_LINKEDIN</a>;</pre>
                 <p class="ext_links">}</p>
             </code>
         </div>
