Added rotating box

--- a/index.html
+++ b/index.html
@@ -42,8 +42,15 @@
                 <p class="ext_links">}</p>
             </code>
         </div>
-        <div class="infinite">
-            <div class="shadow"></div>
+        <div class="roadCont">
+            <div class="infinite">
+                <div class="shadow"></div>
+            </div>
+            <div class="box">
+                <div class="square">
+                    <button class="squareButton"></button>
+                </div>
+            </div>
         </div>
     </body>
 </html>  
