--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <head>
-        <title>ABOUT ME | Daniel Barahona</title>
+        <title>PROJECTS | Daniel Barahona</title>
+        <link rel="icon" href="imgs/icon.png">
         <meta name="description" content="Simple portfolio website">
         <meta name="author" content="Daniel Barahona">
         <a name="links">
