--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <head>
         <title>ABOUT ME | Daniel Barahona</title>
+        <link rel="icon" href="imgs/icon.png">
         <meta name="description" content="Simple portfolio website">
         <meta name="author" content="Daniel Barahona">
         <a name="links">  
-            <link rel="icon" href="./imgs/icon.png">
             <link rel="stylesheet" href="./css/styles.css">
             <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
