Fixed birthday & Mapache pic

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="align-left">
                     <div class="vertical-flex">
                         <h3>Date of Birth</h3>
-                        <h4 id="age">03/05/2001 (age 20)</h4>
+                        <h4 id="age">03/05/2001 (age)</h4>
                         
                         <h3>Nationality</h3>
                         <h4>Spanish</h4>
