--- a/projects/index.html
+++ b/projects/index.html
@@ -8,18 +8,27 @@
         <meta name="description" content="Simple portfolio website">
         <meta name="author" content="Daniel Barahona">
         <a name="links">
-            <link rel="stylesheet" href="./css/styles.css">
+            <link rel="stylesheet" href="../css/styles.css">
             <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         </a>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="./js/load_projects.js"></script>
+        <script src="../js/load_projects.js"></script>
     </head>
 
     <body>
-        <h1 id="title"><a style="text-decoration:none" href="./index.html">Daniel Barahona Martín</a></h1>
+        <h1 id="title"><a style="text-decoration:none" href="../index.html">Daniel Barahona Martín</a></h1>
         <h2>My Portfolio</h2>
+        <p>These are my most remarkable projects so far</p>
+
+        <p><i>(or at least the ones I'm the most proud of)</i></p>
+
+        <p>I included both <b>large-serious</b> projects and fun little projects that <b>kept me entertained on the weekends</b></b>.</p>
+
+        <p>Feel free to take them <b>a closer look on their respective GitHub pages!</b> (Links up below)</p>
 
         <div id="projects-list"></div>
+
+        <p style="margin-bottom: 80px;"></p>
     </body>
 </html>  
