--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <head>
-        <title>ABOUT ME | Daniel Barahona</title>
+        <title>Daniel Barahona | I code stuff!</title>
         <!-- <link rel="icon" href="imgs/icon.png"> -->
         <meta name="description" content="Simple portfolio website">
         <meta name="author" content="Daniel Barahona">
