--- a/projects/index.html
+++ b/projects/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <head>
-        <title>Portfolio | Daniel Barahona</title>
+        <title>Portfolio - Daniel Barahona</title>
         <link rel="icon" href="imgs/icon.png">
         <meta name="description" content="Simple portfolio website">
         <meta name="author" content="Daniel Barahona">
