--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
                         <h3>Address</h3>
                         <h4>Madrid, Spain</h4>
 
-                        <a class="resume-btn" href="./docs/CV.pdf" target="_blank">Check my <i>Curriculum Vitae</i></a>
+                        <a class="resume-btn" href="./docs/CV.pdf" target="_blank">C:\> Check my Resume!</a>
                     </div>
                 </div>
             </div>
         </div>
-        <div style="padding-left: 50px;">
+        <div style="padding-left: 15px;">
 
         <p id="personal-desc">
             <b>Hello, world!</b> Welcome to my personal webpage.
