Added contact page & Updated CV

--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
                         <h3>Address</h3>
                         <h4>Madrid, Spain</h4>
 
-                        <a class="resume-btn" href="./docs/CV.pdf" target="_blank">C:\> Check my Resume!</a>
+                        <a class="projects-btn" href="./docs/CV.pdf" target="_blank">Curriculum Vitae</a>
+                    
+                        <a class="projects-btn" href="projects/">Browse Projects</a>
+
+                        <a class="projects-btn" href="contact/">Contact Info</a>
                     </div>
                 </div>
             </div>
@@ -90,8 +94,6 @@
                 <li style="margin-bottom: 5px">Proficient fluency in English</li>
             </ul>
         <div style="padding-top: 40px"></div>
-
-        <a class="projects-btn" href="projects/">Browse Projects</a>
 
         <p style="margin-bottom: 70px;"></p>
     </body>
