--- a/projects/index.html
+++ b/projects/index.html
@@ -18,6 +18,8 @@
 
     <body>
         <h1 id="title"><a style="text-decoration:none" href="../index.html">Daniel Barahona Martín</a></h1>
+        <img src="../imgs/madrid.jpg" alt="Madrid" style="max-height: 200px;">
+        <br>
         <h2>My Portfolio</h2>
         <p>These are my most remarkable projects so far</p>
 
