Wrote some stuff

--- a/contact/index.html
+++ b/contact/index.html
@@ -26,7 +26,7 @@
 
         <div class="floating-box-white">
             <p id="personal-desc">
-                These are a couple of useful links if you want to contact me for whatever reason, be it business or personal.
+                These are a couple of useful links & info if you want to contact me for whatever reason, be it business or personal.
             </p>
 
             <p id="personal-desc">
@@ -47,11 +47,11 @@
             </ul>
 
              <p id="personal-desc">
-            <b>Other contacts</b>
+            <b>Other mediums</b>
             </p>
             <ul style="text-align:left; list-style-type:square">
                 <li style="margin-bottom: 5px">Email: danibtcontacto@gmail.com</li>
-                <li style="margin-bottom: 5px">Phone (Spain): (+34) 644 31 73 66</li>
+                <li style="margin-bottom: 5px">Phone (Spanish): (+34) 644 31 73 66</li>
             </ul>
         </div>
     </body>
