--- a/index.html
+++ b/index.html
@@ -73,14 +73,24 @@
         <p id="personal-desc">
             <b>Hello, world!</b> Welcome to my personal webpage.
             <br><br>
-            I'm Daniel, an upcoming computer engineer, currently studying at the Polythecnic Superior School
-            (<a href="https://www.uam.es/ss/Satellite/EscuelaPolitecnica/es/home.htm" target="_blank"><b>EPS-UAM, Madrid</b></a>).
-            Of course, I do many other things apart from studying. But above all, I consider myself
+            I'm Daniel, an upcoming computer engineer based in Madrid (Spain), currently studying at the Polythecnic Superior
+            School,
+            or <a href="https://www.uam.es/ss/Satellite/EscuelaPolitecnica/es/home.htm" target="_blank"><b>EPS-UAM</b></a>
+            for short.
+            <br><br>
+            Of course, I do many other things apart from studying, like working on my personal projects. Although I focus on
+            data science & software development at a professional level, I also enjoy classic low-level C programming as a
+            hobby quite a lot!
+            <br><br>
+            There's also my passion for
+            learning foreign languages, which dates back to my early primary school years.
+            <br><br>
+            But above all, I consider myself
             an avid reader and a learning enthusiast. I'm interested in devising a better
             problem‑solving method for challenging tasks, and learning new technologies and tools
             if the need arises.
             <br><br>
-            You can find me on many social media sites, but professionally I'm the most active on Github.
+            You can find me on many social media sites, but professionally I'm the most active on GitHub.
         </p>
 
         <p id="personal-desc">
