--- a/projects/index.html
+++ b/projects/index.html
@@ -25,9 +25,9 @@
 
         <p><i>(or at least the ones I'm the most proud of)</i></p>
 
-        <p>I included both <b>large-serious</b> projects and fun little projects that <b>kept me entertained on the weekends</b></b>.</p>
+        <p>I included <b>both large projects, and fun little picks</b> that kept me entertained on the weekends.</p>
 
-        <p>Feel free to take them <b>a closer look on their respective GitHub pages!</b> (Links up below)</p>
+        <p>Feel free to take them <b>a closer look on their GitHub pages!</b> (Links up below)</p>
 
         <div id="projects-list"></div>
 
