--- a/mapache/index.html
+++ b/mapache/index.html
@@ -21,10 +21,12 @@
                     <td class="menu">
                         <p style="margin-bottom: 50px;"></p>
                         <a href="https://github.com/danibt656/Mapache#1-what-is-it" target="_blank">About</a>
-                        <br>
+                        <p style="margin-bottom: 5px;"></p>
                         <a href="https://github.com/danibt656/Mapache/tree/main/doc" target="_blank">Documentation</a>
-                        <br>
+                        <p style="margin-bottom: 5px;"></p>
                         <a href="https://github.com/danibt656/Mapache#3-frequently-asked-questions" target="_blank">FAQ</a>
+                        <p style="margin-bottom: 5px;"></p>
+                        <a href="./gallery.html">Gallery</a>
                     </td>
                     <td>
                         <h2>Welcome!</h2>
@@ -42,6 +44,17 @@
                                 <li>Yes, it supports HTTPS via OpenSSL & TLS protocol!</li>
                                 <li>Support for Python & PHP server-side scripting (via CGI, or Common Gateway Interface).</li>
                                 <li>Generation of "Apache-like" <a href="https://raw.githubusercontent.com/danibt656/Mapache/main/doc/misc/dirlist.png" target="_blank">directory listings</a>.</li>
+                            </ul>
+                        </p>
+
+
+                        <h3>And here's a list of what it could get to do</h3>
+                        <p>
+                            <ul>
+                                <li>Compatibility with Windows & the <i>WinSock</i>i> API.</li>
+                                <li>Full (or semi-full) implementation of the HTTP protocol, as defined by <a href="https://www.ietf.org/rfc/rfc2616.txt" target="_blank">RFC 2616</a>.</li>
+                                <li>Support for service-activation, no running executables required.</li>
+                                <li>Support for multiple server-side scripting languages.</li>
                             </ul>
                         </p>
     
