Update Mapache start page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         <h1 id="title"><a style="text-decoration:none" href="./index.html">Daniel Barahona Martín</a></h1>
         <!-- <h2>Software Engineering / Data Science</h2> -->
         <img src="imgs/madrid.jpg" alt="Madrid" style="max-height: 200px;">
-        <br>
+
+        <div style="padding-top: 10px"></div>
+        <a class="mapache-btn" href="mapache/">Mapache Server</a>
+        <a class="resume-btn" href="projects/">Browse Projects</a>
+        <a class="resume-btn" href="contact/">Contact Info</a>
+        <div style="padding-top: 10px"></div>
 
         <a href="https://github.com/danibt656" target="_blank" class="fa fa-github"></a>
         <a href="https://www.linkedin.com/in/daniel-barahona-b889751aa/" target="_blank" class="fa fa-linkedin"></a>
@@ -59,11 +64,7 @@
                         <h3>Address</h3>
                         <h4>Madrid, Spain</h4>
 
-                        <a class="projects-btn" href="./docs/CV.pdf" target="_blank">Curriculum Vitae</a>
-                    
-                        <a class="projects-btn" href="projects/">Browse Projects</a>
-
-                        <a class="projects-btn" href="contact/">Contact Info</a>
+                        <a class="resume-btn" href="./docs/CV.pdf" target="_blank">Curriculum Vitae</a>
                     </div>
                 </div>
             </div>
