--- a/mapache/index.html
+++ b/mapache/index.html
@@ -20,6 +20,8 @@
                 <tr>
                     <td class="menu">
                         <p style="margin-bottom: 50px;"></p>
+                        <a href="">Home</a>
+                        <p style="margin-bottom: 5px;"></p>
                         <a href="https://github.com/danibt656/Mapache#1-what-is-it" target="_blank">About</a>
                         <p style="margin-bottom: 5px;"></p>
                         <a href="https://github.com/danibt656/Mapache/tree/main/doc" target="_blank">Documentation</a>
@@ -27,6 +29,7 @@
                         <a href="https://github.com/danibt656/Mapache#3-frequently-asked-questions" target="_blank">FAQ</a>
                         <p style="margin-bottom: 5px;"></p>
                         <a href="./gallery.html">Gallery</a>
+                        <p style="margin-bottom: 50px;"></p>
                     </td>
                     <td>
                         <h2>Welcome!</h2>
