--- a/mapache/gallery.html
+++ b/mapache/gallery.html
@@ -29,13 +29,14 @@
                     <a href="https://github.com/danibt656/Mapache#3-frequently-asked-questions" target="_blank">FAQ</a>
                     <p style="margin-bottom: 5px;"></p>
                     <a href="./gallery.html">Gallery</a>
+                    <p style="margin-bottom: 50px;"></p>
                 </td>
                 <td>
                     <h2>Image gallery</h2>
 
                     <p>
                         Web servers tend to be less photogenic than racoons, so since this server is called "Mapache",
-                        I'll leave you with some racoon pics :^)
+                        I'll leave you to enjoy some super-duper-awesome racoon pics :^)
                     </p>
 
                     <div class="gallery">
