--- a/mapache/index.html
+++ b/mapache/index.html
@@ -44,7 +44,7 @@
                         <p>
                             <ul>
                                 <li>Basic functionality of the HTTP/HTTPS protocol.</li>
-                                <li>Yes, it supports HTTPS via OpenSSL & TLS protocol!</li>
+                                <li>Yes, it supports <a href="https://github.com/danibt656/Mapache/blob/main/doc/https.md" target="_blank">HTTPS</a> via OpenSSL & TLS protocol!</li>
                                 <li>Support for Python & PHP server-side scripting (via CGI, or Common Gateway Interface).</li>
                                 <li>Generation of "Apache-like" <a href="https://raw.githubusercontent.com/danibt656/Mapache/main/doc/misc/dirlist.png" target="_blank">directory listings</a>.</li>
                             </ul>
@@ -54,7 +54,7 @@
                         <h3>And here's a list of what it could get to do</h3>
                         <p>
                             <ul>
-                                <li>Compatibility with Windows & the <i>WinSock</i>i> API.</li>
+                                <li>Compatibility with Windows & the <i>WinSock</i> API.</li>
                                 <li>Full (or semi-full) implementation of the HTTP protocol, as defined by <a href="https://www.ietf.org/rfc/rfc2616.txt" target="_blank">RFC 2616</a>.</li>
                                 <li>Support for service-activation, no running executables required.</li>
                                 <li>Support for multiple server-side scripting languages.</li>
