--- a/mapache/gallery.html
+++ b/mapache/gallery.html
@@ -20,13 +20,13 @@
             <tr>
                 <td class="menu">
                     <p style="margin-bottom: 50px;"></p>
-                    <a href="./index.html">Home</a>
+                    <a href="./">Home</a>
                     <p style="margin-bottom: 5px;"></p>
                     <a href="https://github.com/danibt656/Mapache#1-what-is-it" target="_blank">About</a>
                     <p style="margin-bottom: 5px;"></p>
                     <a href="https://github.com/danibt656/Mapache/tree/main/doc" target="_blank">Documentation</a>
                     <p style="margin-bottom: 5px;"></p>
-                    <a href="https://github.com/danibt656/Mapache#3-frequently-asked-questions" target="_blank">FAQ</a>
+                    <a href="./faq.html">FAQ</a>
                     <p style="margin-bottom: 5px;"></p>
                     <a href="./gallery.html">Gallery</a>
                     <p style="margin-bottom: 50px;"></p>
