--- a/mapache/index.html
+++ b/mapache/index.html
@@ -26,7 +26,7 @@
                         <p style="margin-bottom: 5px;"></p>
                         <a href="https://github.com/danibt656/Mapache/tree/main/doc" target="_blank">Documentation</a>
                         <p style="margin-bottom: 5px;"></p>
-                        <a href="https://github.com/danibt656/Mapache#3-frequently-asked-questions" target="_blank">FAQ</a>
+                        <a href="./faq.html">FAQ</a>
                         <p style="margin-bottom: 5px;"></p>
                         <a href="./gallery.html">Gallery</a>
                         <p style="margin-bottom: 50px;"></p>
