--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="floating-box-white">
             <div class="horizontal-flex">
                 <div class="vertical-flex">
-                    <div class="image-cropper">
+                    <div class="image-cropper-profile">
                         <img src="imgs/profile.jpg" class="rounded" />
                     </div>
                     <!-- <p><i>that's me (& mini-me)</i></p> -->
