--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <img src="imgs/madrid.jpg" alt="Madrid" style="max-height: 200px;">
 
         <div style="padding-top: 10px"></div>
-        <a class="mapache-btn" href="mapache/">Mapache Server</a>
         <a class="resume-btn" href="projects/">Browse Projects</a>
         <a class="resume-btn" href="contact/">Contact Info</a>
+        <a class="mapache-btn" href="mapache/">Mapache Server</a>
         <div style="padding-top: 10px"></div>
 
         <a href="https://github.com/danibt656" target="_blank" class="fa fa-github"></a>
@@ -33,13 +33,15 @@
         <div class="floating-box-white">
             <div class="horizontal-flex">
                 <div class="vertical-flex">
+                    <div style="padding-bottom: 60px"></div>
+
                     <div class="image-cropper-profile">
                         <img src="imgs/profile.jpg" class="rounded" />
                     </div>
                     <!-- <p><i>that's me (& mini-me)</i></p> -->
-                    <div class="image-cropper">
+                    <!-- <div class="image-cropper">
                         <img src="imgs/minime.jpg" class="rounded" />
-                    </div>
+                    </div> -->
                 </div>
                 
                 <div style="padding-left: 40px">
@@ -72,6 +74,7 @@
         <div style="padding-left: 15px;">
 
         <p id="personal-desc">
+            <br><br>
             <b>Hello, world!</b> Welcome to my personal webpage.
             <br><br>
             I'm Daniel, an upcoming computer engineer based in Madrid (Spain), currently studying at the Polythecnic Superior
